<resources>
    <string name="app_name">WeatherApp</string>
    <string name="favourite">Избранные</string>
    <string name="feels_like">ощущается как</string>
    <string name="temperature">%,.2f \u00B0С</string>
    <string name="humidity">%,.2f %%</string>
    <string name="windSpeed">%,.2f м/c</string>
    <string name="pressure">%,.2f мc</string>
    <string name="date">%d.%d.%d: %d:%d</string>

    <string name="cd_weather_humidity">Влажность воздуха</string>
    <string name="cd_weather_windSpeed">Скорость ветра</string>
    <string name="cd_weather_pressure">Атмосферное давление</string>

    <string name="cd_search_icon">Найти другие города</string>
    <string name="cd_geo_icon">Изменить настройки геолокации</string>
    <string name="cd_fav_icon">Добавить город в избранные</string>

    <string name="cd_weather_state_sun">Солнечно</string>
    <string name="cd_weather_state_snow">Снег</string>
    <string name="cd_weather_state_rain">Дождь</string>
    <string name="cd_weather_state_cloud">Облачно</string>
    <string name="cd_weather_state_empty">Погода: загружается</string>
    <string name="TitleFav">Избранные города</string>
    <string name="cd_back">back</string>
    <string name="search_city_hint">Найти город</string>
    <string name="reload_button">Попробовать еще раз</string>


    <string name="loading_state_loading">Загрузка…</string>
    <string name="loading_state_nothing">Данных не найдено</string>
    <string name="loading_state_error">Ошибка загрузки</string>
    <string name="button_ask_for_permission">Дать доступ</string>
    <string name="ask_for_geo_title">С помощью доступа к геолокации приложение может определить погоду для вашего местоположения</string>
    <string name="button_cancel">назад</string>

</resources>