<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/margin"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_height="wrap_content">

    <TextView
        style="@style/regularText"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:text = "@string/ask_for_geo_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <Button
        style="@style/mainButton"
        android:id = "@+id/cancel"
        android:text ="@string/button_cancel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>
        <Space
            android:layout_width="@dimen/margin"
            android:layout_height="0dp"/>
        <Button
            style="@style/mainButton"
            android:id = "@+id/submit"
            android:text = "@string/button_ask_for_permission"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>